deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tally
  namespace: tally
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app: tally
  ports:
    - name: health
      port: 8080
      targetPort: health
    - name: grpc
      port: 9090
      targetPort: grpc
    - name: raft
      port: 9091
      targetPort: raft
    - name: serf
      port: 9092
      targetPort: serf
